rework point system to store data server side for post and update, various other QOL changes

--- a/public/customer-details.html
+++ b/public/customer-details.html
@@ -79,6 +79,7 @@
         <!-- Begin Sale list table -->
           <div class="container" id="sale-container">
             <h1>Sales</h1>
+            <h2>Total Points: <span id="pointTotal">0</span></h2>
             <table class="sortable table table-striped" id="saleTable">
               <thead>
                 <tr>
