changes made as client wanted, table headers, a select input field to choose sale type

--- a/public/customer-details.html
+++ b/public/customer-details.html
@@ -104,13 +104,14 @@
             <table class="sortable table table-striped" id="saleTable">
               <thead>
                 <tr>
-                  <th>Departure City</th>
-                  <th>Departure Flight</th>
-                  <th>Departure Date</th>
-                  <th>Destination City</th>
-                  <th>Return Flight</th>
-                  <th>Return Date</th>
-                  <th>Sale Amount</th>
+                  <th>Type</th>
+                  <th>Origin</th>
+                  <th>Dep. Details</th>
+                  <th>Dep. Date</th>
+                  <th>Destination</th>
+                  <th>Arrival Details</th>
+                  <th>Arrival Date</th>
+                  <th>$$$</th>
                   <th>Points</th>
                 </tr>
               </thead>
