--- a/public/sale-update.html
+++ b/public/sale-update.html
@@ -78,6 +78,7 @@
               <option value="Air">Air</option>
               <option value="Tour">Tour</option>
               <option value="Cruise">Cruise</option>
+              <option value="Re/Ex">Re/Ex</option>
             </select>
           </div>
           <div class="mb-3">
