--- a/public/customer-details.html
+++ b/public/customer-details.html
@@ -54,9 +54,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/addCustomer">Add Customer</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="#">Manage Customers</a>
-            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="/emailList">E-mail List</a>
+            </li>
           </ul>
         </div>
       </div>
