--- a/public/customer-update.html
+++ b/public/customer-update.html
@@ -51,6 +51,9 @@
             <li class="nav-item">
               <a class="nav-link active" href="/addCustomer">Add Customer</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/emailList">E-mail List</a>
+            </li>
           </ul>
         </div>
       </div>
