--- a/public/email-list.html
+++ b/public/email-list.html
@@ -25,8 +25,7 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
-    <title>Customers List</title>
+    <title>Add New Customer</title>
   </head>
   <body>
     <!-- Start Navbar -->
@@ -47,13 +46,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="/">Customers</a>
+              <a class="nav-link" aria-current="page" href="/">Customers</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/addCustomer">Add Customer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/emailList">E-mail List</a>
+              <a class="nav-link active" href="/emailList">E-mail List</a>
             </li>
           </ul>
         </div>
@@ -62,45 +61,20 @@
     <!-- End Navbar -->
 
     <!-- Start body container -->
-    <div class="container">
-      <!-- Begin Search Form -->
-      <form class="forms" action="/search" id="customerSearchForm">
-        <div class="input-group mb-3" id="phoneSearchDiv">
-          <input
-            type="text"
-            name="phone"
-            id="phoneSearchInput"
-            class="form-control"
-            placeholder="Search by phone.."
-          />
-          <button class="btn btn-primary" type="submit" id="phoneSearchBtn">
-            Search
-          </button>
-        </div>
-      </form>
-      <!-- Begin Customer list table -->
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <div class="container" id="customer-container">
-            <h1>Customers</h1>
-            <table class="sortable table table-striped" id="customerTable">
-              <thead>
-                <tr>
-                  <th>Name</th>
-                  <th>Phone</th>
-                  <th>See Details</th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-          </div>
-        </div>
+    <body>
+      <div class="container" id="emailDiv">
+        <button class="btn btn-primary" id="copyText">Copy all</button>
+        <textarea
+          type="text"
+          id="emailText"
+          class="form-control bigInput"
+          rows="10"
+        ></textarea>
       </div>
-      <!-- End table -->
-    </div>
+    </body>
     <!-- End body container -->
 
     <!-- Import our javascript -->
-    <script src="js/customer-list.js" type="text/javascript"></script>
+    <script src="js/email-list.js" type="text/javascript"></script>
   </body>
 </html>
