--- a/public/sale-add.html
+++ b/public/sale-add.html
@@ -61,6 +61,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/addCustomer">Add Customer</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/emailList">E-mail List</a>
+            </li>
           </ul>
         </div>
       </div>
