added gender to prompts and profile

--- a/public/customer-add.html
+++ b/public/customer-add.html
@@ -89,6 +89,30 @@
               placeholder="Last Name"
             />
           </div>
+          <fieldset id="genderFieldset">
+            <legend>Gender</legend>
+            <div class="mb-3 form-check">
+              <label for="maleInput" class="form-check-label">Male</label>
+              <input
+                checked
+                type="radio"
+                name="gender"
+                id="maleInput"
+                class="form-check-input"
+                value="Male"
+              />
+            </div>
+            <div class="mb-3 form-check">
+              <label for="maleInput" class="form-check-label">Female</label>
+              <input
+                type="radio"
+                name="gender"
+                id="femaleInput"
+                class="form-check-input"
+                value="Female"
+              />
+            </div>
+          </fieldset>
           <div class="mb-3">
             <label for="dobInput" class="form-label"
               >Date of Birth (REQUIRED)</label
