added pagination to tables

--- a/public/customer-list.html
+++ b/public/customer-list.html
@@ -25,7 +25,12 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
+    <!-- Import sortable.js, for table sorting function -->
     <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
+    <!-- Import stylesheet for table pagination -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
+    <!-- Import script for table pagination -->
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
     <title>Customers List</title>
   </head>
   <body>
