--- a/public/customer-list.html
+++ b/public/customer-list.html
@@ -27,10 +27,19 @@
     ></script>
     <!-- Import sortable.js, for table sorting function -->
     <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
-    <!-- Import stylesheet for table pagination -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
-    <!-- Import script for table pagination -->
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css"
+    />
+
+    <script
+      type="text/javascript"
+      charset="utf8"
+      src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"
+    ></script>
+
     <title>Customers List</title>
   </head>
   <body>
