--- a/public/customer-list.html
+++ b/public/customer-list.html
@@ -25,20 +25,10 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    <!-- Import sortable.js, for table sorting function -->
-    <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css"
-    />
+    <!-- Import fancytables for pagination and sorting, also includes search function should we need it later. -->
 
-    <script
-      type="text/javascript"
-      charset="utf8"
-      src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.fancytable/dist/fancyTable.min.js"></script>
 
     <title>Customers List</title>
   </head>
@@ -97,7 +87,7 @@
         <div class="col-md-8 col-md-offset-2">
           <div class="container" id="customer-container">
             <h1>Customers</h1>
-            <table class="sortable table table-striped" id="customerTable">
+            <table class="table table-striped" id="customerTable">
               <thead>
                 <tr>
                   <th>Name</th>
