--- a/public/customer-details.html
+++ b/public/customer-details.html
@@ -25,8 +25,12 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    <!-- Import fancytables for pagination and sorting, also includes search function -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery.fancytable/dist/fancyTable.min.js"></script>
+    <!-- importing simplePagination.js plugin for paginating tables, and the css for it -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.4/jquery.simplePagination.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.4/simplePagination.css"
+    />
     <title>Customer Details</title>
   </head>
   <body>
@@ -119,6 +123,8 @@
               <tbody>
               </tbody>
             </table>
+            <!-- prepare div for pagination -->
+            <div id="page-nav"></div>
           </div>
       <!-- End table -->
       </div>
