added createdat and updatedat data in sales views, as requested

--- a/public/sale-update.html
+++ b/public/sale-update.html
@@ -66,6 +66,11 @@
       <form class="forms" id="saleUpdateForm">
         <div class="mb-3" id="saleUpdateDiv">
           <div class="mb-3">
+            <span id="createdAt"></span>
+            <br>
+            <span id="updatedAt"></span>
+          </div>
+          <div class="mb-3">
             <label for="idInput" class="form-label">ID</label>
             <input
               readonly
