--- a/public/customer-details.html
+++ b/public/customer-details.html
@@ -26,11 +26,12 @@
       crossorigin="anonymous"
     ></script>
     <!-- importing simplePagination.js plugin for paginating tables, and the css for it -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.4/jquery.simplePagination.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.4/jquery.simplePagination.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.4/simplePagination.css"
-    />
+    /> -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery.fancytable/dist/fancyTable.min.js"></script>
     <title>Customer Details</title>
   </head>
   <body>
@@ -109,6 +110,8 @@
             <table class="table table-striped" id="saleTable">
               <thead>
                 <tr>
+                  <th class="tableHeadId">customerID</th>
+                  <th class="tableHeadId">saleID</th>
                   <th>Type</th>
                   <th>Origin</th>
                   <th>Dep. Details</th>
@@ -123,8 +126,8 @@
               <tbody>
               </tbody>
             </table>
-            <!-- prepare div for pagination -->
-            <div id="page-nav"></div>
+            <!-- prepare div for pagination with simplePagination.js-->
+            <!-- <div id="page-nav"></div> -->
           </div>
       <!-- End table -->
       </div>
