new mileage functionality, each customer can have multiple mileages, and they are added/removed on their details page dynamically

--- a/public/customer-add.html
+++ b/public/customer-add.html
@@ -147,7 +147,7 @@
               placeholder="E-mail"
             />
           </div>
-          <div class="mb-3">
+          <!-- <div class="mb-3">
             <label for="mileageInput" class="form-label">Mileage</label>
             <input
               type="text"
@@ -156,7 +156,7 @@
               class="form-control regInput"
               placeholder="Mileage Number"
             />
-          </div>
+          </div> -->
         </div>
         <button class="btn btn-primary" type="submit" id="customerAddBtn">
           Submit
