--- a/public/customer-update.html
+++ b/public/customer-update.html
@@ -102,32 +102,28 @@
           <div class="mb-3">
             <fieldset id="genderFieldset">
               <legend>Gender</legend>
-            <div class="mb-3 form-check">
-              <label for="maleInput" class="form-check-label"
-                >Male</label
-              >
-              <input
-              checked
-                type="radio"
-                name="gender"
-                id="maleInput"
-                class="form-check-input"
-                value="Male"
-              />
-            </div>
-            <div class="mb-3 form-check">
-              <label for="maleInput" class="form-check-label"
-                >Female</label
-              >
-              <input
-                type="radio"
-                name="gender"
-                id="femaleInput"
-                class="form-check-input"
-                value="Female"
-              />
-            </div>
-          </fieldset>
+              <div class="mb-3 form-check">
+                <label for="maleInput" class="form-check-label">Male</label>
+                <input
+                  checked
+                  type="radio"
+                  name="gender"
+                  id="maleInput"
+                  class="form-check-input"
+                  value="Male"
+                />
+              </div>
+              <div class="mb-3 form-check">
+                <label for="maleInput" class="form-check-label">Female</label>
+                <input
+                  type="radio"
+                  name="gender"
+                  id="femaleInput"
+                  class="form-check-input"
+                  value="Female"
+                />
+              </div>
+            </fieldset>
             <label for="dobInput" class="form-label"
               >Date of Birth (REQUIRED)</label
             >
@@ -161,7 +157,7 @@
               placeholder="E-mail"
             />
           </div>
-          <div class="mb-3">
+          <!-- <div class="mb-3">
             <label for="mileageInput" class="form-label">Mileage</label>
             <input
               type="text"
@@ -170,7 +166,7 @@
               class="form-control regInput"
               placeholder="Mileage Number"
             />
-          </div>
+          </div> -->
         </div>
         <button class="btn btn-primary" type="submit" id="customerUpdateBtn">
           Update
