removal of dob requirements upon request

--- a/public/customer-add.html
+++ b/public/customer-add.html
@@ -118,7 +118,7 @@
           </fieldset>
           <div class="mb-3">
             <label for="dobInput" class="form-label"
-              >Date of Birth (REQUIRED)</label
+              >Date of Birth</label
             >
             <input
               type="date"
