--- a/public/customer-update.html
+++ b/public/customer-update.html
@@ -128,7 +128,7 @@
               </div>
             </fieldset>
             <label for="dobInput" class="form-label"
-              >Date of Birth (REQUIRED)</label
+              >Date of Birth</label
             >
             <input
               type="date"
