--- a/public/profits.html
+++ b/public/profits.html
@@ -25,14 +25,7 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    <!-- importing simplePagination.js plugin for paginating tables, and the css for it -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.4/jquery.simplePagination.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.4/simplePagination.css"
-    /> -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery.fancytable/dist/fancyTable.min.js"></script>
-    <title>Customers List</title>
+    <title>Add New Customer</title>
   </head>
   <body>
     <!-- Start Navbar -->
@@ -53,7 +46,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="/">Customers</a>
+              <a class="nav-link" aria-current="page" href="/">Customers</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/addCustomer">Add Customer</a>
@@ -61,7 +54,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/emailList">E-mail List</a>
             </li>
-            <li class="nav-item" id="profitsNav"></li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/profits">Profits</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" id="logoutLink" href="/logout">Logout</a>
             </li>
@@ -70,48 +65,14 @@
       </div>
     </nav>
     <!-- End Navbar -->
+
     <!-- Start body container -->
-    <div class="container">
-      <!-- Begin Search Form -->
-      <form class="forms" action="/search" id="customerSearchForm">
-        <div class="input-group mb-3" id="phoneSearchDiv">
-          <input
-            type="text"
-            name="phone"
-            id="phoneSearchInput"
-            class="form-control"
-            placeholder="Search by phone.."
-          />
-          <button class="btn btn-primary" type="submit" id="phoneSearchBtn">
-            Search
-          </button>
-        </div>
-      </form>
-      <!-- Begin Customer list table -->
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <div class="container" id="customer-container">
-            <h1>Customers</h1>
-            <table class="table table-striped" id="customerTable">
-              <thead>
-                <tr id="tableHeadersRow">
-                  <th class="tableHeadId">ID</th>
-                  <th>Name</th>
-                  <th>Phone</th>
-                  <th>See Details</th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-            <!-- prepare div for pagination using simplePagination.js-->
-            <!-- <div id="page-nav"></div> -->
-          </div>
-        </div>
-      </div>
-      <!-- End table -->
-    </div>
+    <body>
+      <div class="container" id="profitsContainer"></div>
+    </body>
     <!-- End body container -->
+
     <!-- Import our javascript -->
-    <script src="js/customer-list.js" type="text/javascript"></script>
+    <script src="js/profits.js" type="text/javascript"></script>
   </body>
 </html>
