--- a/public/customer-details.html
+++ b/public/customer-details.html
@@ -63,6 +63,7 @@
             <li class="nav-item">
               <a class="nav-link" href="/emailList">E-mail List</a>
             </li>
+            <li class="nav-item" id="profitsNav"></li>
             <li class="nav-item">
               <a class="nav-link" id="logoutLink" href="/logout">Logout</a>
             </li>
@@ -149,6 +150,7 @@
                   <th>Arrival Details</th>
                   <th>Arrival Date</th>
                   <th>$$$</th>
+                  <th id="profitHeader"></th>
                   <th>Points</th>
                 </tr>
               </thead>
