--- a/public/profits.html
+++ b/public/profits.html
@@ -54,6 +54,7 @@
             <li class="nav-item">
               <a class="nav-link" href="/emailList">E-mail List</a>
             </li>
+            <li class="nav-item" id="profitsNav"></li>
             <li class="nav-item">
               <a class="nav-link active" href="/profits">Profits</a>
             </li>
