--- a/public/sale-update.html
+++ b/public/sale-update.html
@@ -54,6 +54,7 @@
             <li class="nav-item">
               <a class="nav-link" href="/emailList">E-mail List</a>
             </li>
+            <li class="nav-item" id="profitsNav"></li>
             <li class="nav-item" id="logoutLink">
               <a class="nav-link" href="/logout">Logout</a>
             </li>
