added accounts receivable function.  pre-migration

--- a/public/customer-add.html
+++ b/public/customer-add.html
@@ -54,6 +54,11 @@
             <li class="nav-item">
               <a class="nav-link" href="/emailList">E-mail List</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/accReceivable"
+                >Acc. Receivable</a
+              >
+            </li>
             <li class="nav-item" id="profitsNav"></li>
             <li class="nav-item">
               <a class="nav-link" id="logoutLink" href="/logout">Logout</a>
