--- a/public/accounts-receivable.html
+++ b/public/accounts-receivable.html
@@ -25,7 +25,14 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    <title>Add New Customer</title>
+    <!-- importing simplePagination.js plugin for paginating tables, and the css for it -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.4/jquery.simplePagination.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.4/simplePagination.css"
+    /> -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery.fancytable/dist/fancyTable.min.js"></script>
+    <title>Customer Details</title>
   </head>
   <body>
     <!-- Start Navbar -->
@@ -46,16 +53,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Customers</a>
+              <a class="nav-link" href="/"
+                >Customers</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/addCustomer">Add Customer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/emailList">E-mail List</a>
+              <a class="nav-link" href="/emailList">E-mail List</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/accReceivable"
+              <a class="nav-link active" href="/accReceivable"
                 >Acc. Receivable</a
               >
             </li>
@@ -70,20 +79,36 @@
     <!-- End Navbar -->
 
     <!-- Start body container -->
-    <body>
-      <div class="container" id="emailDiv">
-        <button class="btn btn-primary" id="copyText">Copy all</button>
-        <textarea
-          type="text"
-          id="emailText"
-          class="form-control bigInput"
-          rows="10"
-        ></textarea>
+      <div class="container">
+        <!-- Begin Sale list table -->
+          <div class="container" id="sale-container">
+            <h1>Accounts Receivable</h1>
+            <table class="table table-striped" id="saleTable">
+              <thead>
+                <tr>
+                  <th class="tableHeadId">customerID</th>
+                  <th class="tableHeadId">saleID</th>
+                  <th class="tableHeadId">remarks</th>
+                  <th>Name</th>
+                  <th>Type</th>
+                  <th>Origin</th>
+                  <th>Dep. Details</th>
+                  <th>Dep. Date</th>
+                  <th>Sale Amount</th>
+                  <th>Acc. Receivable</th>
+                </tr>
+              </thead>
+              <tbody id="saleTableBody">
+              </tbody>
+            </table>
+            <!-- prepare div for pagination with simplePagination.js-->
+            <!-- <div id="page-nav"></div> -->
+          </div>
+      <!-- End table -->
       </div>
-    </body>
     <!-- End body container -->
 
     <!-- Import our javascript -->
-    <script src="js/email-list.js" type="text/javascript"></script>
+    <script src="js/accounts-receivable.js" type="text/javascript"></script>
   </body>
 </html>
