added date of sale column, fixed profit header to display properly depending on admin or not

--- a/public/customer-details.html
+++ b/public/customer-details.html
@@ -147,6 +147,7 @@
                 <tr>
                   <th class="tableHeadId">customerID</th>
                   <th class="tableHeadId">saleID</th>
+                  <th>DOS</th>
                   <th>Type</th>
                   <th>Origin</th>
                   <th>Dep. Details</th>
